--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,11 @@ main {
   box-shadow: 0 1px 10px gray;
   background-color: #131313;
 }
+
+.contenedorGeneracion{
+  justify-content: center;
+  align-content: center;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #1d41b9;
+}
