--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,26 @@ main {
   align-items: center;
 }
 
-.contenedorPrincipal {
+.contenedorPrincipal,
+.contenedorGeneracion,
+.contenedorMayorEdad {
   justify-content: center;
   align-content: center;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.contenedorPrincipal {
   padding: 50px;
   border-radius: 15px;
   box-shadow: 0 1px 10px gray;
   background-color: #131313;
 }
 
-.contenedorGeneracion{
-  justify-content: center;
-  align-content: center;
-  padding: 20px;
-  border-radius: 5px;
+.contenedorGeneracion {
   background-color: #1d41b9;
+}
+
+.contenedorMayorEdad {
+  background-color: #198754;
 }
