--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 main {
@@ -17,6 +16,12 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2rem 1rem;
+}
+
+#resultados {
+  overflow-y: auto;
+  width: 100%;
 }
 
 .contenedorPrincipal,
